# rock-trim-implosion

./: .gitignore  CMakeLists.txt  readme.md
include/: cilinder.h  color.h  hittable_object.h  plane.h  ray.h  sphere.h  vector3.h
src/: color.cpp  main.cpp  ray.cpp  sphere.cpp  vector3.cpp
